# synacor-challenge-vm

./: .gitignore  CMakeLists.txt  README.md  make  solution.txt  validate-challenge.sh
.github/workflows/: qa.yaml
arch/: CMakeLists.txt  arch.hpp
assembler/: CMakeLists.txt
assembler/cmd/: CMakeLists.txt  assemble.cpp  cmd.cpp  parse.cpp  tokenize.cpp  tokenizer.cpp
assembler/lib/: CMakeLists.txt  code_generation.cpp  code_generation.hpp  grammar.cpp  grammar.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
assembler/test/: CMakeLists.txt  test.cpp  test_code_generation.hpp  test_parser.hpp  test_tokenizer.hpp  utils.cpp  utils.hpp
assembler/test/testdata/fixtures/: numbers.in  sample2.in
assembler/test/testdata/fixtures/code_generation/: numbers.in  sample.in  undefined_ref.in
assembler/test/testdata/fixtures/parser/: numbers.in  sample.in  sample2.in
assembler/test/testdata/fixtures/tokenizer/: instruction.in  numbers.in  string.in
assembler/test/testdata/golden/: empty.out  endline.out  instruction.out  numbers.out  sample.out  sample2.out  tag.out
assembler/test/testdata/golden/code_generation/: instruction.out  numbers.out  sample.out  sample.txt  sample2.out  sample2.txt
assembler/test/testdata/golden/parser/: endline.out  instruction.out  numbers.out  sample.out  sample2.out  tag.out
assembler/test/testdata/golden/tokenizer/: char.out  empty.out  numbers.out  string.out
brute-force/: readme.MD
brute-force/bruteforce-maze/: run.py
brute-force/bruteforce-seventh-code/: bruteforce.sh  solution.txt
docs/assembly/: assembly.md
docs/spec/: assembly.md
example-programs/: hello-world.as  hello-world.syn
explore-dungeon/: explore.go  go.mod  readme.MD
external_libraries/: CMakeLists.txt  CxxOpts.cmake  Doctest.cmake
programs/: example.as  example.syn  hello-world.as
testutils/: CMakeLists.txt  utils.cpp  utils.hpp
vm/: CMakeLists.txt
vm/cmd/: CMakeLists.txt  cmd.cpp  coverage.cpp  helpers.hpp  instr-viewer.cpp  runvm.cpp  vmctl.cpp  vmctl.hpp
vm/lib/: CMakeLists.txt  cpu.cpp  cpu.hpp  memory.hpp  word.hpp
vm/test/: CMakeLists.txt  cpu.hpp  test.cpp  test_cpu.hpp
vm/test/testdata/fixtures/: assemble-all.sh
vm/test/testdata/fixtures/cpu/: add.as  and.as  and.in  call-ret.as  eq.as  gt.as  gt.in  in.as  in.in  jf.as  jf.in  jmp.as  jmp.in  jt.as  mod.as  mod.in  mult.as  mult.in  not.as  not.in  or.as  or.in  out.as  push-pop-memory.as  push-pop-memory.in  push-pop-register.as  rwmem.as  rwmem.in  set.as  set.in
vm/test/testdata/golden/cpu/add/: memory.out
vm/test/testdata/golden/cpu/and/: memory.out
vm/test/testdata/golden/cpu/call-ret/: memory.out
vm/test/testdata/golden/cpu/eq/: memory.out
(+9 files in other folders)
